--- a/src/components/exclude-modal/style.css
+++ b/src/components/exclude-modal/style.css
@@ -17,6 +17,7 @@
   width: 500px;
   background: #ffff;
   color: black;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
 }
 
 .header-modal {
@@ -71,4 +72,5 @@
 
 .btn-exclude {
   background: #ef4444;
+  color: #e5e7eb;
 }
