--- a/src/components/loading/style.css
+++ b/src/components/loading/style.css
@@ -51,3 +51,14 @@
   font-size: 1.2rem;
   font-weight: bold;
 }
+
+.loader-container.sm {
+  flex-direction: row; 
+  padding: 0;          
+  gap: 10px;           
+  width: auto;        
+}
+
+.loader-container.sm .loader {
+  margin-bottom: 0; 
+}
