--- a/src/pages/Beneficiario/Listagem/style.module.css
+++ b/src/pages/Beneficiario/Listagem/style.module.css
@@ -19,7 +19,7 @@
 
 .headerBeneficiario {
   display: flex;
-  align-items: center;
+  align-items: self-start;
   justify-content: space-between;
 
   h2 {
